@@ -922,4 +922,5 @@ scid-4.3
 - Hide the startup window
 - Improve some defaults of Scids empty config
 - Major update for brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
+- Fix crosstable export to reflect contents from spell checking file (thanks to Steve)
 - updated nederland translation (thanks to Leander Laruelle)
